# Laminax-KPL

./: README.md  VERIFICATION.md  errors.py  image_functions.py  kyaro_builtins.py  lexer.py  test_program.kyaro
examples/: fibonacci.kyaro  filesystem_demo.kyaro  fizzbuzz.kyaro  image_drawing.kyaro  loops.kyaro  math_demo.kyaro
src/python/: ai_ml_functions.py  ast_nodes.py  environment.py  file_system_functions.py  interpreter.py  main.py  parser.py  token_types.py
src/python/examples/: data_science.kyaro  functions.kyaro  hello_world.kyaro  image_filters.kyaro  image_transforms.kyaro  lists.kyaro  ml_demo.kyaro  neural_network.kyaro
src/rust/: Cargo.toml
src/rust/src/: ai_ml_functions.rs  ast_nodes.rs  builtins.rs  environment.rs  errors.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  token_types.rs
tests/: test_compatibility.py
