[package]
name = "laminax-kpl"
version = "1.0.0"
edition = "2021"
authors = ["Laminax <https://laminax.org>"]
description = "A Small, Fast and Extensible Programming Language - Rust Implementation"

[dependencies]
# For error handling and result types
anyhow = "1.0"
thiserror = "1.0"

# For collections and data structures
indexmap = "2.0"

# For file I/O and path handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For command line interface
clap = { version = "4.0", features = ["derive"] }

# For regex support (if needed for advanced string operations)
regex = "1.0"

# For random number generation (equivalent to Python random)
rand = "0.8"
rand_distr = "0.4"

# For mathematical functions (equivalent to Python math)
libm = "0.2"

# For statistical functions (equivalent to Python statistics)
statrs = "0.16"

# For image processing (equivalent to Python PIL/Pillow)
image = "0.24"
imageproc = "0.23"

# For AI/ML functionality (linear algebra and neural networks)
ndarray = "0.15"
ndarray-linalg = "0.16"
nalgebra = "0.32"

# For file system operations
walkdir = "2.0"
glob = "0.3"
tempfile = "3.0"

# For async operations
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# For time operations
chrono = "0.4"

# For additional math functions
num-traits = "0.2"
num-complex = "0.4"

[dev-dependencies]
# For testing
criterion = "0.5"

[[bin]]
name = "kyaro"
path = "src/main.rs"

[lib]
name = "laminax_kpl"
path = "src/lib.rs"
